--- a/Forms/MacroSwitchForm.resx
+++ b/Forms/MacroSwitchForm.resx
@@ -176,6 +176,34 @@
         AWmhgS4AAtgUggAARH7/qPxM104AAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="pictureBox70.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAsAAAAOCAYAAAD5YeaVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAADpJREFUKFNj+I8G6uvr4RgdMKALjGzFyJKEMGmK0a3GhcHOgLkHXRJdIYpiXBqQ
+        AWmhgS4AAtgUggAARH7/qPxM104AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox71.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAsAAAAOCAYAAAD5YeaVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAADpJREFUKFNj+I8G6uvr4RgdMKALjGzFyJKEMGmK0a3GhcHOgLkHXRJdIYpiXBqQ
+        AWmhgS4AAtgUggAARH7/qPxM104AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox68.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAsAAAAOCAYAAAD5YeaVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAADpJREFUKFNj+I8G6uvr4RgdMKALjGzFyJKEMGmK0a3GhcHOgLkHXRJdIYpiXBqQ
+        AWmhgS4AAtgUggAARH7/qPxM104AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox66.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAsAAAAOCAYAAAD5YeaVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAADpJREFUKFNj+I8G6uvr4RgdMKALjGzFyJKEMGmK0a3GhcHOgLkHXRJdIYpiXBqQ
+        AWmhgS4AAtgUggAARH7/qPxM104AAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAsAAAAOCAYAAAD5YeaVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
@@ -219,6 +247,20 @@
 </value>
   </data>
   <data name="pictureBox20.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAsAAAAOCAYAAAD5YeaVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAADpJREFUKFNj+I8G6uvr4RgdMKALjGzFyJKEMGmK0a3GhcHOgLkHXRJdIYpiXBqQ
+        AWmhgS4AAtgUggAARH7/qPxM104AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox74.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAsAAAAOCAYAAAD5YeaVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAADpJREFUKFNj+I8G6uvr4RgdMKALjGzFyJKEMGmK0a3GhcHOgLkHXRJdIYpiXBqQ
+        AWmhgS4AAtgUggAARH7/qPxM104AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox75.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAsAAAAOCAYAAAD5YeaVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAAADpJREFUKFNj+I8G6uvr4RgdMKALjGzFyJKEMGmK0a3GhcHOgLkHXRJdIYpiXBqQ
@@ -274,6 +316,20 @@
         AWmhgS4AAtgUggAARH7/qPxM104AAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="pictureBox78.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAsAAAAOCAYAAAD5YeaVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAADpJREFUKFNj+I8G6uvr4RgdMKALjGzFyJKEMGmK0a3GhcHOgLkHXRJdIYpiXBqQ
+        AWmhgS4AAtgUggAARH7/qPxM104AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox79.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAsAAAAOCAYAAAD5YeaVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAADpJREFUKFNj+I8G6uvr4RgdMKALjGzFyJKEMGmK0a3GhcHOgLkHXRJdIYpiXBqQ
+        AWmhgS4AAtgUggAARH7/qPxM104AAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="pictureBox40.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAsAAAAOCAYAAAD5YeaVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
@@ -317,6 +373,20 @@
 </value>
   </data>
   <data name="pictureBox46.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAsAAAAOCAYAAAD5YeaVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAADpJREFUKFNj+I8G6uvr4RgdMKALjGzFyJKEMGmK0a3GhcHOgLkHXRJdIYpiXBqQ
+        AWmhgS4AAtgUggAARH7/qPxM104AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox82.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAsAAAAOCAYAAAD5YeaVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAADpJREFUKFNj+I8G6uvr4RgdMKALjGzFyJKEMGmK0a3GhcHOgLkHXRJdIYpiXBqQ
+        AWmhgS4AAtgUggAARH7/qPxM104AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox83.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAsAAAAOCAYAAAD5YeaVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAAADpJREFUKFNj+I8G6uvr4RgdMKALjGzFyJKEMGmK0a3GhcHOgLkHXRJdIYpiXBqQ
